results/SpecGenBench/0-shot/log-PowerOfFourLoop-2023_11_29_00_03_36.txt
class PowerOfTwoLoop {
    //@ requires n >= 0;
    //@ ensures \result == (n == 1);
    public boolean isPowerOfTwo(int n) {
        if(n <= 0) {
            return false;
        }
        //@ maintaining n >= 0;
        //@ maintaining n % 4 == 0 ==> n' == n / 4;
        //@ decreases n;
        while (n % 4 == 0) {
            n /= 4;
        }
        return n == 1;
    }
}
/home/max/Documents/JMLGPT/tmp/PowerOfFourLoop.java:9: error: unclosed character literal
        //@ maintaining n % 4 == 0 ==> n' == n / 4;
                                        ^
1 error

